--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
             "app/AppCache.php"
         ]
     },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=5.3.9",
         "symfony/symfony": "2.8.*",
@@ -21,17 +23,7 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        
-        "doctrine/doctrine-fixtures-bundle": "dev-master",
-        "symfony/assetic-bundle": "^2.8",
-        "twig/extensions": "~1.0",
-        "gedmo/doctrine-extensions":  "dev-master",
-        "google/apiclient": "@beta",
-        "hwi/oauth-bundle": "0.4.*@dev",
-        
-        "sebardo/core": "dev-master",
-        "sebardo/admin": "dev-master",
-        "sebardo/blog": "dev-master",
+
         "sebardo/ecommerce": "dev-master"
 
     },
