--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -58,13 +58,22 @@ doctrine:
 
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
-        naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
-        dql:
-            numeric_functions:
-                DISTANCE: CoreBundle\Functions\DistanceFunction
-            string_functions:
-                GroupConcat: CoreBundle\Functions\GroupConcatFunction
+#        naming_strategy: doctrine.orm.naming_strategy.underscore
+#        auto_mapping: true
+#        dql:
+#            numeric_functions:
+#                DISTANCE: CoreBundle\Functions\DistanceFunction
+#            string_functions:
+#                GroupConcat: CoreBundle\Functions\GroupConcatFunction
+        entity_managers:
+            default:
+                auto_mapping: true
+                # New custom filter
+                filters:
+                    oneLocale:
+                        class: A2lix\I18nDoctrineBundle\Doctrine\ORM\Filter\OneLocaleFilter
+                        enabled: true
+                        
 # Swiftmailer Configuration
 swiftmailer:
     transport: "%mailer_transport%"
@@ -78,7 +87,7 @@ assetic:
     debug:          "%kernel.debug%"
     use_controller: '%kernel.debug%'
     bundles:
-        [ CoreBundle, AdminBundle, EcommerceBundle ]
+        [ CoreBundle, AdminBundle, BlogBundle, EcommerceBundle ]
     node: "%node_path%"
     filters:
         cssrewrite:
@@ -115,7 +124,16 @@ hwi_oauth:
             scope:               "email"
             options:
                 display: popup 
-
+                
+a2lix_i18n_doctrine:
+    manager_registry: doctrine       # [1]
+a2lix_translation_form:
+    locale_provider: default       # [1]
+    locales: [es, en, de]      # [1-a]
+    default_locale: es             # [1-b]
+    required_locales: [es, en, de]         # [1-c]
+    manager_registry: doctrine     # [2]
+    templating: "CoreBundle:Base:default.tabs.html.twig"      # [3]
 # If you want add item in admin menu use this example
 # dashboard:
 #    icon_class: 'fa fa-dashboard'
@@ -123,11 +141,23 @@ hwi_oauth:
 #    options:
 #        menuitems: core_menuitem_index
 #        sliders: core_slider_index
-core:
+admin:
     admin_menus:  ~
-    
+    apis:
+        google_analytics:
+            options:
+                application_name: Analitycs integración
+                oauth2_client_id: 43533348693-s4rafifpr1o07gja2kgnfbhf4tjq2g0f.apps.googleusercontent.com
+                oauth2_client_secret: lo04F5hvUi_gPaAxyucY70jy
+                oauth2_redirect_uri: 'http://sasturain.dev/admin/analytics'
+                developer_key: AIzaSyCda_bsJ-kEa1M1DJenwKfUfyLVlVKuC6I
+            
 ecommerce:
-  environment: sandbox
-  merchant_id: 3j49t8qb3h4nv9hk
-  public_key: tygwjhymnm5bm55s
-  private_key: a791f33b9d41ab9c57c857da1c526fa1
+#    fixture_data: true
+#    currency_symbol: €
+#    advert_unit_price: 1
+#    vat: 0.21
+#    special_percentage_charge: 0
+#    delivery_expenses_type: by_percentage
+#    delivery_expenses_percentage: 0
+#    bank_account: 'ESXX XXX XXXX XXXX XXXX XXXX'
