--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,9 +6,9 @@ admin:
     resource: "@AdminBundle/Resources/config/routing.yml"
     prefix:   /
 
-#blog:
-#    resource: "@BlogBundle/Resources/config/routing.yml"
-#    prefix:   /
+blog:
+    resource: "@BlogBundle/Resources/config/routing.yml"
+    prefix:   /
     
 ecommerce:
     resource: "@EcommerceBundle/Resources/config/routing.yml"
