--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "app/AppCache.php"
         ]
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "dev", 
     "prefer-stable": true,
     "require": {
         "php": ">=5.3.9",
@@ -24,7 +24,10 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
 
-        "sebardo/ecommerce": "dev-master"
+        "sebardo/blog": "dev-master",
+        "sebardo/ecommerce": "dev-master",
+        "a2lix/i18n-doctrine-bundle": "^0.1.0",
+        "a2lix/translation-form-bundle": "^2.1"
 
     },
     "require-dev": {
