--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -25,12 +25,17 @@ doctrine:
         user:     "%database_user%"
         password: "%database_password%"
         charset:  UTF8
-    orm:
-        auto_generate_proxy_classes: "%kernel.debug%"
-        naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
-        dql:
-            numeric_functions:
-                DISTANCE: CoreBundle\Functions\DistanceFunction
-            string_functions:
-                GroupConcat: CoreBundle\Functions\GroupConcatFunction
+#    orm:
+#        auto_generate_proxy_classes: "%kernel.debug%"
+#        naming_strategy: doctrine.orm.naming_strategy.underscore
+#        auto_mapping: true
+#        dql:
+#            numeric_functions:
+#                DISTANCE: CoreBundle\Functions\DistanceFunction
+#            string_functions:
+#                GroupConcat: CoreBundle\Functions\GroupConcatFunction
+
+security:
+    firewalls:
+        secured_area:
+            http_basic: ~
