Add front bundle

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -13,3 +13,8 @@ blog:
 ecommerce:
     resource: "@EcommerceBundle/Resources/config/routing.yml"
     prefix:   /
+    
+front:
+    resource: "@FrontBundle/Controller/"
+    type:     annotation
+    prefix:   /
