--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,6 +4,7 @@ imports:
     - { resource: "@CoreBundle/Resources/config/services.yml" }
     - { resource: "@AdminBundle/Resources/config/services.yml" }
     - { resource: "@EcommerceBundle/Resources/config/services.yml" }
+    - { resource: "@FrontBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -87,7 +88,7 @@ assetic:
     debug:          "%kernel.debug%"
     use_controller: '%kernel.debug%'
     bundles:
-        [ CoreBundle, AdminBundle, BlogBundle, EcommerceBundle ]
+        [ CoreBundle, AdminBundle, BlogBundle, EcommerceBundle , FrontBundle ]
     node: "%node_path%"
     filters:
         cssrewrite:
