--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -101,17 +101,17 @@ assetic:
 # OAuth login social networks  
 hwi_oauth:
      #name of the firewall in which this bundle is active, this setting MUST be set
-    firewall_name: secured_area
+    firewall_names: [secured_area]
     target_path_parameter: /
     resource_owners:
         twitter:
             type:                twitter
-            client_id:           lV0OGkdpom7fu0umpyOYl69v4
-            client_secret:       i0JA4XNVvqGLED88X031208nJzydR07ek3zNOPjqWtiaoEyTsU
+            client_id:           WVdAUmB1txAvLPw8Y5l0ImLp1
+            client_secret:       DyaY1TkbFh1b643irHCs0pbMo009CWrwuD34LQvEqkvTZHfdAi
         google:
             type:                google
-            client_id:           295710704391-kuvgr89k3empant281ilbk0aescnhiee.apps.googleusercontent.com
-            client_secret:       Vvo_sIbWW7mdi-vLh6tpLkMa
+            client_id:           43533348693-lhnjpmq8age0finbjb3e3hniviqhqbrp.apps.googleusercontent.com
+            client_secret:       VNg2Ap9fMghICwIVX46IzS0EK
             scope:               "email profile"
             options:
                 access_type:     offline
