--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -25,6 +25,7 @@ parameters:
         name: Sasturain
         extended_layout: 'CoreBundle:Base:base.layout.html.twig'
         extended_layout_admin: 'AdminBundle:Base:layout.html.twig'
+        notification_navbar_template: 'CoreExtraBundle:Notification:navbar.top.html.twig'
         upload_directory: uploads
         server_base_url: 'http://sasturain.dev'
         fixtures_test: false
