--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
 
+        "sebardo/core_extra": "dev-master",
         "sebardo/blog": "dev-master",
         "sebardo/ecommerce": "dev-master"
 
