--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -164,6 +164,7 @@ a2lix_translation_form:
 #        sliders: core_slider_index
 admin:
     admin_menus:  ~
+    company_menus:  ~
     apis:
         google_analytics:
             options:
