--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,7 +1,7 @@
 imports:
     - { resource: parameters.yml }
     - { resource: "@CoreBundle/Resources/config/security_oauth.yml" }
-    - { resource: "@CoreBundle/Resources/config/services.yml" }
+    - { resource: "@CoreBundle/Resources/config/services_oauth.yml" }
     - { resource: "@CoreExtraBundle/Resources/config/services.yml" }
     - { resource: "@AdminBundle/Resources/config/services.yml" }
     - { resource: "@EcommerceBundle/Resources/config/services.yml" }
@@ -145,7 +145,11 @@ hwi_oauth:
             client_id:           13943a65e997457da0adb66abb4ef5c2
             client_secret:       56a8dc30590d47f496d65623d60f100e
             scope:               basic
-                
+               
+jms_i18n_routing:
+    default_locale: es
+    locales: [es, en, de]
+    strategy: prefix_except_default                 
 a2lix_i18n_doctrine:
     manager_registry: doctrine       # [1]
 a2lix_translation_form:
@@ -155,6 +159,12 @@ a2lix_translation_form:
     required_locales: [es, en, de]         # [1-c]
     manager_registry: doctrine     # [2]
     templating: "CoreBundle:Base:default.tabs.html.twig"      # [3]
+    
+    
+core:
+    extended_layout: 'FrontBundle:Base:layout.html.twig'
+    server_base_url: 'http://sasturain.dev'
+    admin_email: admin@admin.com
 # If you want add item in admin menu use this example
 # dashboard:
 #    icon_class: 'fa fa-dashboard'
