--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -108,8 +108,8 @@ hwi_oauth:
     resource_owners:
         test_connect:
             type:                oauth2
-            client_id:           4_1f10ptc6pyqs0gkoog0cwcwokwkw04gsww4gsss8ogcswo48w4
-            client_secret:       43dqxml7kieck4ock04o0kow4c4k08s44kc0o008oosk880swk
+            client_id:           6_4hh0tss5n7ggokk8cg8s0wg4cwk8k84k4wgo88w4c8w8skw4os.
+            client_secret:       3c0dflogo3404ws8k0g8k00ok8os8ws4w8kkgw4koogc88wgsk
             access_token_url:    http://oauth.sasturain.com/oauth/v2/token
             authorization_url:   http://oauth.sasturain.com/oauth/v2/auth
             infos_url:           http://oauth.sasturain.com/me
