--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
 
         "sebardo/core_extra": "dev-master",
         "sebardo/blog": "dev-master",
-        "sebardo/ecommerce": "dev-master"
+        "sebardo/catalogue": "dev-master",
+        "sebardo/payment": "dev-master"
 
     },
     "require-dev": {
